# matrixbots

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/matrix/: client.rs
